# ferry-bus-konstanz

./: .gitignore  Makefile  index.html  konstanz-meersburg.html  meersburg-konstanz.html  readme.md
.github/workflows/: deploy.yml
assets/: index-t9XvwoN2.css
ferry-bus-display/: index.html  konstanz-meersburg.html  main.js  meersburg-konstanz.html  package.json  style.css  vite.config.js
pkg/: ferry_bus_wasm.d.ts  ferry_bus_wasm.js  ferry_bus_wasm_bg.wasm  ferry_bus_wasm_bg.wasm.d.ts  package.json
python/: ferry_konstanz_meersburg.py  table_ferry_bus.py  trrestgtrf.py
rust/: Cargo.toml  readme.md
rust/src/: lib.rs
